--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ title: Home
 <!-- CTA -->
 
 <header>
-  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/bg.jpg);" width="1920" heigth="1080">
+  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/bg.svg);" width="1920" heigth="1080">
       <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
           <div class="text-center">
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-500 underline">Curious</span></h1>
@@ -887,7 +887,7 @@ title: Home
   <div class="flex items-center justify-center">
       <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.jpg" alt="Nextcloud rating" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
@@ -900,7 +900,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.jpg" alt="11ty and TailwindCSS" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
@@ -913,7 +913,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.jpg" alt="Cloud Paths" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
@@ -926,7 +926,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.jpg" alt="Cybersecurity" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
@@ -966,7 +966,7 @@ title: Home
         </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.jpg" alt="Bachelor Projektarbeit" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelor Projektarbeit <a class="text-gray-500">(2.0)</a></h3>
@@ -975,7 +975,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.jpg" alt="Systemdynamik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.svg" alt="Systemdynamik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Systemdynamik <a class="text-gray-500">(1.7)</a></h3>
@@ -984,7 +984,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.jpg" alt="Machinelles Sehen" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen <a class="text-gray-500">(1.0)</a></h3>
@@ -993,7 +993,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.jpg" alt="Robotik" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1440" height="810">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
@@ -1002,7 +1002,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.jpg" alt="NC-Programmierung" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1440" height="810">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
@@ -1011,7 +1011,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.jpg" alt="Projektarbeit" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1440" height="810">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
@@ -1020,7 +1020,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.jpg" alt="Softwareentwicklung" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1440" height="810">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
@@ -1029,7 +1029,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.jpg" alt="Microcomputer-Systeme" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme <a class="text-gray-500">(1.7)</a></h3>
@@ -1038,7 +1038,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.jpg" alt="Mechatronische Wandler" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler <a class="text-gray-500">(2.3)</a></h3>
@@ -1047,7 +1047,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.jpg" alt="Steuerungtechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik <a class="text-gray-500">(1.3)</a></h3>
@@ -1056,7 +1056,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.jpg" alt="Regelungstechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
@@ -1065,7 +1065,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.jpg" alt="Messtechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.svg" alt="Messtechnik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-500">(2.7)</a></h3>
@@ -1074,7 +1074,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.jpg" alt="Produktentwicklungsprozess" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
@@ -1083,7 +1083,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.jpg" alt="Werkstoffkunde" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.svg" alt="Werkstoffkunde" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-500">(3.0)</a></h3>
@@ -1092,7 +1092,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.jpg" alt="Schlüsselqualifikation" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.svg" alt="Schlüsselqualifikation" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-500">(1.0)</a></h3>
