--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base.html
-title: Home
+title: PEREZRE
 ---
 
 <!-- Navbar -->
@@ -11,19 +11,19 @@ title: Home
   <ul class="nav nav-tabs nav-justified flex flex-col md:flex-row flex-wrap list-none border-b-0 pl-0" id="tabs-tabJustify" role="tablist">
     
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="home" role="tab" aria-controls="tabs-tabJustify" aria-selected="false">Home</a>
+    <a href="" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">Home</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#about" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-profile-tabJustify" role="tab" aria-controls="tabs-profileJustify" aria-selected="false">About</a>
+    <a href="#about" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">About</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#skills" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Skills</a>
+    <a href="#skills" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">Skills</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#projects" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Projects</a>
+    <a href="#projects" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">Projects</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
@@ -88,14 +88,8 @@ title: Home
 
 <!-- About Me -->
 
-<div class="tab-content mt-15" id="tabs-tabContentJustify">
-  <div class="tab-pane fade show active" id="about" role="tabpanel"
-    aria-labelledby="tabs-home-tabJustify">
-  </div>
-</div>
-
-<section class="bg-white dark:bg-gray-800 ">
-  <div id="about" class="tab-pane fade show active" id="home" role="tabpanel"
+<section class="bg-white dark:bg-gray-800">
+  <div id="about" class="tab-pane fade show active" role="tabpanel"
     aria-labelledby="home">
   <div class="container px-6 py-8 mx-auto">
       <div class="items-center lg:flex">
@@ -128,13 +122,9 @@ title: Home
 
 <!-- Skills -->
 
-<div class="tab-content mt-15" id="tabs-tabContentJustify">
-  <div class="tab-pane fade show active" id="skills" role="tabpanel"
-    aria-labelledby="tabs-home-tabJustify">
-  </div>
-</div>
-
 <section class="bg-gray-100 dark:bg-gray-900">
+  <div id="skills" class="tab-pane fade show active" role="tabpanel"
+  aria-labelledby="skills">
   <div class="container px-6 py-10 mx-auto">
       <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Skill<span class="text-blue-500">set</span></h1>
       <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
@@ -870,13 +860,9 @@ title: Home
 
 <!-- Own Projects -->
 
-<div class="tab-content mt-15" id="tabs-tabContentJustify">
-  <div class="tab-pane fade show active" id="projects" role="tabpanel"
-    aria-labelledby="tabs-home-tabJustify">
-  </div>
-</div>
-
 <section class="bg-white dark:bg-gray-800">
+  <div id="projects" class="tab-pane fade show active" role="tabpanel"
+  aria-labelledby="projects">
   <div class="container px-6 py-10 mx-auto">
     <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Own <span class="text-blue-500">Projects</span></h1>
 
