--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,8 @@ title: PEREZRE
       <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
           <div class="text-center">
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-500 underline">Curious</span></h1>
-              <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200  bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">More</button>
+              <a href="#projects">
+              <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500" >More</button></a>
           </div>
       </div>
   </div>
@@ -101,7 +102,7 @@ title: PEREZRE
               </p>
               <button class="inline-flex items-center px-4 py-2 mt-4 text-xs font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
                 <a href="mailto: contact@perezre.de">
-                  <svg class=" w-4 h-4 mr-2" fill="none" stroke="white" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                  <svg class="justif-center w-4 h-4 mr-2" fill="none" stroke="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                 </a>
                 <span>Get in touch</span>
               </button>
@@ -129,7 +130,7 @@ title: PEREZRE
   <div class="container px-6 py-10 mx-auto">
       <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Skill<span class="text-blue-500">set</span></h1>
       <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
-        An alphabetic overview 
+        An alphabetic overview some tools I use(ed) to work with
       </p>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
 
@@ -956,7 +957,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelor Projektarbeit <a class="text-gray-500">(2.0)</a></h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Pressenvermessungtool <a class="text-gray-500">(2.0)</a></h3>
                 <p class="text-gray-500">Die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
               </div>
           </div>
@@ -965,8 +966,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.svg" alt="Systemdynamik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Systemdynamik <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Mit Matlab und Simulink Simulation entwicklung von Systemdynamik zwischen zwei Behälter</p>            
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Zwei Behälter ohne Interaktion <a class="text-gray-500">(1.7)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es zwei Flüssigkeitsbehälter ohne Interaktion als mathematisches Modell in MatLab zu modellieren und diese zu vergleichen. </p>            
               </div>
           </div>
 
@@ -974,8 +975,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Matlab mit Image Processing Toolbox Entwicklung von Bildbearbeitung von Bildverbesserung</p>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bildbearbeitung und -korrektur <a class="text-gray-500">(1.0)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es gegebene Bilder mithilfe von Matlab zu manipulieren bzw. korriegeren. Mit Fokus auf Verarbeitung, Auswertung und Kompression.</p>
               </div>
           </div>
 
@@ -983,8 +984,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
-                <p class="text-gray-500">Industrieroboter Eigenschaften, Aufbau und Anwendungen mit Funktionen beschreiben</p>            
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bauweise von Robotern<a class="text-gray-500">(1.3)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es den Vergleich der Bauweise von Industrieroboter auf deren Eigenschaften unter gegebenen Aspekten zu untersuchen.</p>            
               </div>
           </div>
 
@@ -993,7 +994,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Einführung in Computergestützte Fertigungstechnik und Roboter Programmierung</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist im ersten Teil die NC-Programmierung anhand von Fräsaufgaben und dann die Roboterprogrammierung eines Industrieroboter in einer Roboterzelle.</p>
               </div>
           </div>
 
@@ -1001,8 +1002,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
-                <p class="text-gray-500">Entwicklung eines Maschine Learning Algorithmus zur Ziffererkennung in Python mit Tensorflow</p>            
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Machine Learning<a class="text-gray-500">(1.3)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es als Team mit PM-Methoden einen Algorithmus zur Identifikation von Ziffern unter Verwendung von Python zu entwickeln.</p>            
               </div>
           </div>
 
@@ -1011,7 +1012,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">GUI-Entwicklung eines Petrinetz simulator in Python. Anwendung eines Aufzugs.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es ein Petri-Netz-Simulator zu entwickeln und zu implementieren. Mit Fokus auf GUI, Simulator und Graphische Auswertung.</p>
               </div>
           </div>
 
@@ -1019,8 +1020,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="1920" height="1080">
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Entwicklung einer Wetterstation mit Raspberry Pi und drei Sensoren als IoT System</p>            
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Wetterstation mit DHT11 Sensor <a class="text-gray-500">(1.7)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es ein mit dem Raspberry eine IoT Wetterstation und dem DHT11 Sensor umzusetzen. Mit Echtzeitabruf auf beliebigen Endgeräten. </p>            
               </div>
           </div>
 
@@ -1028,8 +1029,8 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler <a class="text-gray-500">(2.3)</a></h3>
-                <p class="text-gray-500">Beschreibung von Piezo Sensor in der Industrie. Anhand von Funktion, Anwendung und Wettbewerbplatz</p>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Piezo-Sensoren <a class="text-gray-500">(2.3)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit es es die Anwendung von Piezo-Sensoren in der Prozessmesstechnik zu untersuchen und Unterschiede feststellen.</p>
               </div>
           </div>
 
@@ -1037,17 +1038,17 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik <a class="text-gray-500">(1.3)</a></h3>
-                <p class="text-gray-500">Entwicklung einer Steuerung des Programmablaufs einer Bohreinrichtung in SPS</p>            
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerung von Bohreinrichtung <a class="text-gray-500">(1.3)</a></h3>
+                <p class="text-gray-500">Das Ziel der Arbeit ist das Spannen und Bohren von Werkstücken mit einer SPS Steuerung zu entwickeln und in CoDeSys zu Simulieren.</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="1920" height="1080">
 
-              <div class="mt-2">
+              <div class="mt-2"> 
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Einführung in Matlab einer Regelung und Simulation in Simulink</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es eine Einführung in Simulink anahang vorgegebener Aufgaben zu erarbeiten. Unter anderem die Paremtrierung und Simulation eines MFDS. </p>
               </div>
           </div>
 
@@ -1056,16 +1057,16 @@ title: PEREZRE
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-500">(2.7)</a></h3>
-                <p class="text-gray-500">Messtechnik Grundlagen und Einführung in LabView Simulation</p>            
+                <p class="text-gray-500">Das Ziel der Arbeit ist es verschiedene Messungen mit Multimeter, Oszilloskop zu untersuchen. Es folgt die Modellierung und Simulation von Anwendungen in LabVIEW. </p>            
               </div>
           </div>
 
-          <div class="w-full max-w-xs text-left">
+          <div class="w-full max-w-xs text-left"> 
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Entwicklung einer Kosmetikmaschine an der VDI 2222</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist ein Technischer Bericht zur Creme Herstellung und Konstruktion einer Abfülleinrichtung nach VDI 2221 zu erarbeiten.</p>
               </div>
           </div>
 
@@ -1074,7 +1075,7 @@ title: PEREZRE
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-500">(3.0)</a></h3>
-                <p class="text-gray-500">Einführung in Werkstoffe von Metallen und Kunststoffe. Laborbericht in Werkstoffprüfung</p>            
+                <p class="text-gray-500">Das Ziel der Arbeit ist es Versuche der mechanischen Werkstoffprüfung, Metallographie und Kunststoffe zu analysieren und auszuwerten. </p>            
               </div>
           </div>
 
@@ -1083,7 +1084,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Beschreibung für eines </p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es ein technisches System weiterzuentwickeln, mit dem Fokus auf die Aspekte die für den Studiengang Mechatronik relevant sind.</p>
               </div>
           </div>
   </div>
